--- a/sheet.html
+++ b/sheet.html
@@ -101,7 +101,7 @@
       <table style="width: 100%">
         <tr>
           <th colspan="4" style="width: 10%">
-            <img src="/js/logoindex.jpeg" alt="Mi imagen" class="mi-imagen" />
+            <img src="https://drive.google.com/file/d/1rgy_oqRvTsUyia_ZfIMt7vSnZ1lgUuWq/view?usp=sharing" alt="Mi imagen" class="mi-imagen" />
           </th>
           <th colspan="4" style="width: 40%; text-align: left">
             <b style="font-size: 50px" id="empresa"></b><br />
