--- a/sheet.html
+++ b/sheet.html
@@ -101,7 +101,8 @@
       <table style="width: 100%">
         <tr>
           <th colspan="4" style="width: 10%">
-            <img src="<a href="https://drive.google.com/thumbnail?id=1rgy_oqRvTsUyia_ZfIMt7vSnZ1lgUuWq"> <img src="https://drive.google.com/thumbnail?id=1rgy_oqRvTsUyia_ZfIMt7vSnZ1lgUuWq" width="100%"/></a>" alt="Mi imagen" class="mi-imagen" />
+            <a href="https://drive.google.com/thumbnail?id=1rgy_oqRvTsUyia_ZfIMt7vSnZ1lgUuWq">
+            <img src="https://drive.google.com/thumbnail?id=1rgy_oqRvTsUyia_ZfIMt7vSnZ1lgUuWq" width="100%"/></a>" alt="Mi imagen" class="mi-imagen" />
           </th>
           <th colspan="4" style="width: 40%; text-align: left">
             <b style="font-size: 50px" id="empresa"></b><br />
