--- a/sheet.html
+++ b/sheet.html
@@ -103,6 +103,7 @@
           <th colspan="4" style="width: 10%">
             <a href="https://drive.google.com/thumbnail?id=1rgy_oqRvTsUyia_ZfIMt7vSnZ1lgUuWq">
             <img src="https://drive.google.com/thumbnail?id=1rgy_oqRvTsUyia_ZfIMt7vSnZ1lgUuWq" width="100%" alt="Mi imagen" class="mi-imagen"/a>
+              <img id="logo" alt="Mi imagen">
           </th>
           <th colspan="4" style="width: 40%; text-align: left">
             <b style="font-size: 50px" id="empresa"></b><br />
@@ -328,6 +329,8 @@
       }
 
       function fillData() {
+        document.getElementById("logo").textContent =
+          getQueryParam("logo");
         document.getElementById("empresa").textContent =
           getQueryParam("empresa");
         document.getElementById("razon").textContent = getQueryParam("razon");
