--- a/sheet.html
+++ b/sheet.html
@@ -101,9 +101,9 @@
       <table style="width: 100%">
         <tr>
           <th colspan="4" style="width: 10%">
-            <a href="https://drive.google.com/thumbnail?id=1rgy_oqRvTsUyia_ZfIMt7vSnZ1lgUuWq">
-            <img src="https://drive.google.com/thumbnail?id=1rgy_oqRvTsUyia_ZfIMt7vSnZ1lgUuWq" width="100%" alt="Mi imagen" class="mi-imagen"/a>
-              <img id="logo" alt="">
+            <a href="logo">
+            <img src="logo" width="100%" alt="Mi imagen" class="mi-imagen"/a>
+            <img id="logo" alt="">
           </th>
           <th colspan="4" style="width: 40%; text-align: left">
             <b style="font-size: 50px" id="empresa"></b><br />
