--- a/sheet.html
+++ b/sheet.html
@@ -102,7 +102,7 @@
         <tr>
           <th colspan="4" style="width: 10%">
             <a id="logo" href="logo">Ir a la página</a>
-            <a href="https://drive.google.com/thumbnail?id=1rgy_oqRvTsUyia_ZfIMt7vSnZ1lgUuWq">
+            <a id="logo" href="#">Ir a la página</a>
             <img src="https://drive.google.com/thumbnail?id=1rgy_oqRvTsUyia_ZfIMt7vSnZ1lgUuWq" width="100%" alt="Mi imagen" class="mi-imagen"/a>
           </th>
           <th colspan="4" style="width: 40%; text-align: left">
