--- a/sheet.html
+++ b/sheet.html
@@ -330,7 +330,7 @@
       function fillData() {
         let urlImagen = "logo";
         let imagen = document.getElementById("logo");
-        imagen.src = logo;
+        imagen.src = urlImagen;
         document.getElementById("logo").textContent =
           getQueryParam("logo");
         document.getElementById("empresa").textContent =
