--- a/sheet.html
+++ b/sheet.html
@@ -101,7 +101,8 @@
       <table style="width: 100%">
         <tr>
           <th colspan="4" style="width: 10%">
-            <img src="https://drive.google.com/thumbnail?id=1rgy_oqRvTsUyia_ZfIMt7vSnZ1lgUuWq" width="100%" alt="Mi imagen" class="mi-imagen"/a>            
+            <img src="https://drive.google.com/thumbnail?id=1rgy_oqRvTsUyia_ZfIMt7vSnZ1lgUuWq" width="100%" alt="Mi imagen" class="mi-imagen"/a>
+            <img id="logo" alt="Imagen dinámica">
           </th>
           <th colspan="4" style="width: 40%; text-align: left">
             <b style="font-size: 50px" id="empresa"></b><br />
@@ -326,7 +327,12 @@
         return urlParams.get(param);
       }
 
-      function fillData() {             
+      function fillData() {
+        let urlImagen = "logo";
+        let imagen = document.getElementById("logo");
+        imagen.src = urlImagen;
+        document.getElementById("logo").textContent =
+          getQueryParam("logo");
         document.getElementById("empresa").textContent =
           getQueryParam("empresa");
         document.getElementById("razon").textContent = getQueryParam("razon");
