--- a/index.html
+++ b/index.html
@@ -3,33 +3,43 @@
 <head>
   <meta charset="UTF-8">
   <title>Captura de Ventas</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <div id="app">
     <h1>Captura de Ventas</h1>
-    <!-- Buscador de productos -->
-    <input type="text" id="search-product" placeholder="Buscar producto por descripción o código de barras" />
-    <button id="scan-barcode">Escanear Código de Barras</button>
-    <div id="products-list"></div>
-    <hr />
-    <h2>Carrito</h2>
-    <div id="cart"></div>
-    <hr />
-    <h2>Cliente</h2>
-    <input type="text" id="search-client" placeholder="Buscar cliente por nombre, teléfono o RTN" />
-    <div id="clients-list"></div>
-    <button id="add-client">Agregar nuevo cliente</button>
-    <div id="new-client-form" style="display:none;">
-      <input type="text" id="new-client-nombre" placeholder="Nombre" />
-      <input type="text" id="new-client-telefono" placeholder="Teléfono" />
-      <button id="save-new-client">Guardar Cliente</button>
-    </div>
-    <hr />
-    <h2>Venta</h2>
-    <label>Caja: <input type="text" id="caja" /></label>
-    <button id="confirm-sale">Confirmar Venta</button>
-    <div id="sale-result"></div>
+    <section>
+      <h2>Buscar Producto</h2>
+      <input type="text" id="search-product" placeholder="Buscar por descripción o código de barras" autocomplete="off" />
+      <button id="scan-barcode">Escanear Código de Barras</button>
+      <div id="products-list"></div>
+    </section>
+    <section>
+      <h2>Carrito</h2>
+      <div id="cart"></div>
+    </section>
+    <section>
+      <h2>Cliente</h2>
+      <input type="text" id="search-client" placeholder="Buscar cliente por nombre, teléfono o RTN" autocomplete="off" />
+      <div id="clients-list"></div>
+      <button id="add-client">Agregar nuevo cliente</button>
+      <div id="new-client-form" class="modal">
+        <div class="modal-content">
+          <span class="close" id="close-client-form">&times;</span>
+          <h3>Nuevo Cliente</h3>
+          <input type="text" id="new-client-nombre" placeholder="Nombre" />
+          <input type="text" id="new-client-telefono" placeholder="Teléfono" />
+          <button id="save-new-client">Guardar Cliente</button>
+        </div>
+      </div>
+    </section>
+    <section>
+      <h2>Venta</h2>
+      <label>Caja: <input type="text" id="caja" /></label>
+      <button id="confirm-sale">Confirmar Venta</button>
+      <div id="sale-result"></div>
+    </section>
   </div>
   <script src="app.js"></script>
 </body>
